Experimental fix: sortability not working on mobile devices

--- a/public/css/countdown.css
+++ b/public/css/countdown.css
@@ -90,11 +90,13 @@
 
 .rect .timer-monster-top {
     /*font-size: 50px;*/
-    font-size: 40px;
+    /*font-size: 40px;*/
+    font-size: 30px;
 }
 
 .rect .timer-monster-bottom {
-    font-size: 16px;
+    /*font-size: 16px;*/
+    font-size: 14px;
 }
 
 @media  only screen and (min-width : 360px) {
@@ -125,7 +127,7 @@
 
 @media  only screen and (min-width : 768px) {
     .timer-monster-top {
-        font-size: 80px;
+        font-size: 60px;
     }
     .timer-monster-bottom {
         font-size: 20px;
